add node-exporter as role

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,3 +1,4 @@
+---
 - name: Setup Monitoring
   hosts: dev
   become: yes
@@ -6,4 +7,6 @@
   roles:
     - prometheus
     - grafana
+    - node-exporter
+  
 
