--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -46,6 +46,14 @@
     mode: '0755'
     remote_src: true
 
+- name: Copy configuration
+  ansible.builtin.copy:
+    src: prometheus.yml
+    dest: /etc/prometheus
+    owner: "{{prometheus_user}}"
+    group: "{{prometheus_group}}"
+  notify: Restart prometheus
+
 - name: Deploy Prometheus systemd service
   ansible.builtin.template:
     src: prometheus.service.j2
