add roles: node-exporter

--- a/roles/grafana/tasks/main.yml
+++ b/roles/grafana/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create user
   ansible.builtin.user:
-    name: grafana
+    name: "{{grafana_user}}"
     shell: /sbin/nologin
     system: true
     create_home: false
