--- a/roles/blackbox-exporter/defaults/main.yml
+++ b/roles/blackbox-exporter/defaults/main.yml
@@ -4,4 +4,4 @@ blackbox_user: blackbox
 blackbox_group: blackbox
 blackbox_path: /opt/blackbox_exporter/
 blackbox_bin: /usr/local/bin/blackbox_exporter
-blackbox_config: /etc/blackbox_exporter/config.yml
+blackbox_config_path: /etc/blackbox_exporter/
